--- a/les3-combining/task3/src/Index.html
+++ b/les3-combining/task3/src/Index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <!-- <div id="root"></div> -->
-  <script src="index.js"></script>
+  <div id="root"></div>
+
 </body>
 
 </html>
